tap-hightlight/remove

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -45,6 +45,7 @@
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     touch-action: manipulation;
+    -webkit-tap-highlight-color: transparent;
   }
   
   body {
