--- a/src/app/[locale]/globals.scss
+++ b/src/app/[locale]/globals.scss
@@ -13,7 +13,7 @@
   --bg-nav: #252525a8;
   --bg-linear: rgba(39, 39, 39, 0.57);
 
-  --border: #181818;
+  --border: #222222;
 }
 
 .light {
@@ -74,43 +74,33 @@ body {
   border-radius: .1rem;
 }
 
-option {
+.option-item {
   margin: 1rem;
-  border-bottom: 1px solid var(--p);
+  padding: .5rem 1.5rem;
+
+  border-radius: .8rem;
+  border: 1px solid transparent;
+  background-color: var(--bg-2);
 }
 
 select {
-  position:relative;
+  position: absolute;
+ 
+  top: 60px;
+
+  padding: .5rem 1.5rem;
+
+  font-size: .9rem;
+  font-weight: 500;
+
+  border-radius: .8rem;
+  border: 1px solid transparent;
+  background-color: var(--bg-2);
+
+  color: var(--p);
+
   display: none;
-  top:50px;
-
-  &.active{
-    display:block;
+  &.active {
+    display: block;
   }
-}
-
-.theme-switch {
-  width: 40px;
-  height: 40px;
-
-  padding: .1rem;
-
-  border-radius: 100%;
-  border: 1px solid var(--border);
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  cursor: pointer;
-
-  svg {
-    font-size: 18px !important;
-    color: var(--p);
-  }
-
-}
-
-.theme-switch {
-  border: 1px solid var(--border);
 }
